tests/templates/immutable/05-headlamp-sso/baseline/manifests/opa/resources/ingress-infra.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    cluster.kfd.sighup.io/useful-link.enable: "true"
  annotations:
    cluster.kfd.sighup.io/useful-link.url: https://gpm.internal.example.com
    cluster.kfd.sighup.io/useful-link.name: "Gatekeeper Policy Manager"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Gatekeeper Policy Manager"
    
    forecastle.stakater.com/group: "gatekeeper-system"
    
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/sighupio/gatekeeper-policy-manager/master/app/static-content/logo.svg"
    
    
    

  name: gpm
  
  namespace: pomerium
  
spec:
  ingressClassName: internal
  rules:
    - host: gpm.internal.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
          
            service:
              name: pomerium
              port:
                number: 80
          
  tls:
    - hosts:
      - gpm.internal.example.com
